--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Publish
         if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         env:
-          API_TOKEN: ${{ secrets.PACKAGIST_API_TOKEN }}
+          PACKAGIST_API_TOKEN: ${{ secrets.PACKAGIST_API_TOKEN }}
         run: |
           curl -X POST -H 'content-type:application/json' \
-            'https://packagist.org/api/update-package?username=nicolasbrugneaux-passbase.com&apiToken=$API_TOKEN' \
+            "https://packagist.org/api/update-package?username=nicolasbrugneaux-passbase.com&apiToken=$PACKAGIST_API_TOKEN" \
             -d '{"repository":{"url":"https://github.com/passbase/passbase-php"}}'
