--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,41 @@
 {
-    "name": "passbase/passbase-php",
-    "version": "0.0.1",
-    "description": "",
-    "keywords": [
-        "swagger",
-        "php",
-        "sdk",
-        "api"
-    ],
-    "homepage": "http://swagger.io",
-    "license": "proprietary",
-    "authors": [
-        {
-            "name": "Swagger and contributors",
-            "homepage": "https://github.com/swagger-api/swagger-codegen"
-        }
-    ],
-    "require": {
-        "php": ">=5.5",
-        "ext-curl": "*",
-        "ext-json": "*",
-        "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^6.2"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "squizlabs/php_codesniffer": "~2.6",
-        "friendsofphp/php-cs-fixer": "~1.12"
-    },
-    "autoload": {
-        "psr-4": { "Passbase\\" : "lib/" }
-    },
-    "autoload-dev": {
-        "psr-4": { "Passbase\\" : "test/" }
+  "name": "passbase/passbase-php",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [
+    "swagger",
+    "php",
+    "sdk",
+    "api"
+  ],
+  "homepage": "http://swagger.io",
+  "license": "proprietary",
+  "authors": [
+    {
+      "name": "Swagger and contributors",
+      "homepage": "https://github.com/swagger-api/swagger-codegen"
     }
+  ],
+  "require": {
+    "php": ">=5.5",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "ext-mbstring": "*",
+    "guzzlehttp/guzzle": "^6.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^4.8",
+    "squizlabs/php_codesniffer": "~2.6",
+    "friendsofphp/php-cs-fixer": "~2.15.8"
+  },
+  "autoload": {
+    "psr-4": {
+      "Passbase\\": "lib/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Passbase\\": "test/"
+    }
+  }
 }
