--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,8 +14,8 @@
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">./lib/Api</directory>
-            <directory suffix=".php">./lib/Models</directory>
+            <directory suffix=".php">./lib/api</directory>
+            <directory suffix=".php">./lib/models</directory>
         </whitelist>
     </filter>
 </phpunit>
