--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,16 +6,18 @@
          convertWarningsToExceptions="true"
          stopOnFailure="false">
     <testsuites>
-        <testsuite>
+        <testsuite name="tests">
             <directory>./test/Api</directory>
             <directory>./test/Model</directory>
         </testsuite>
     </testsuites>
-
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">./lib/api</directory>
             <directory suffix=".php">./lib/models</directory>
         </whitelist>
     </filter>
+    <php>
+        <ini name="error_reporting" value="E_ALL" />
+    </php>
 </phpunit>
